# market-streaming-data-platform

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: market_symbols.yaml
docs/: architecture.md  roadmap.md
docs/runbooks/: binance-kafka-e2e-smoke-check.md  binance-one-shot-smoke-check.md  kafka-smoke-check.md
jobs/producer/: binance.py  binance_producer.py  binance_publisher.py  config.py  confluent.py  events.py  kafka.py  publisher.py  smoke_publish_one.py  websocket.py
jobs/streaming/: iceberg_bronze.py  iceberg_catalog.py  iceberg_sink.py  iceberg_trade_streaming_job.py  kafka_source.py  s3a_checkpoint.py  trade_streaming_job.py  trades.py
tests/unit/: test_binance_producer.py  test_binance_publisher.py  test_binance_receive_one_trade.py  test_binance_trade_parser.py  test_binance_trade_receiver_session.py  test_producer_config.py  test_producer_confluent.py  test_producer_events.py  test_producer_kafka.py  test_producer_publisher.py  test_producer_smoke_publish_one.py  test_producer_websocket.py  test_streaming_iceberg_bronze.py  test_streaming_iceberg_catalog.py  test_streaming_iceberg_sink.py  test_streaming_iceberg_trade_streaming_job.py  test_streaming_kafka_source.py  test_streaming_s3a_checkpoint.py  test_streaming_trade_streaming_job.py  test_streaming_trades.py
